# testgit

./: CMakeCache.txt  CMakeLists.txt  Makefile  bestslot1106  cmake_install.cmake  convertimage.cpp
cap/: cap_rgb_000.rgb  cap_rgb_001.rgb  cap_rgb_002.rgb  cap_rgb_003.rgb  cap_rgb_004.rgb  cap_rgb_005.rgb  cap_rgb_006.rgb  cap_rgb_007.rgb  cap_rgb_008.rgb  cap_rgb_009.rgb
